--- a/css/footer.css
+++ b/css/footer.css
@@ -1,4 +1,5 @@
 .foot {
+
   background: url("../images/background.svg") no-repeat center center/cover;
   color: white;
 }
@@ -17,13 +18,13 @@
 
 .foot ul li {
   margin: 0 10px;
-  
+
 }
 
 .foot a {
   color: white;
   text-decoration: none;
-  
+
 }
 
 .foot img {
@@ -33,4 +34,34 @@
 
 .border-top {
   border-top: 1px solid rgba(255, 255, 255, 0.3);
+}
+
+.img-fluid {
+  position: relative;
+  margin-left: 10vw;
+}
+
+.mys {
+  position: relative;
+  margin-left: 10vw;
+  font-family:josfin sans ;
+
+}
+
+.QL {
+  margin-left: 200px;
+  width: max-content;
+
+}
+
+.border-top {
+  position: relative;
+  top: 40px;
+}
+
+.list-unstyled li {
+  font-size: large;
+  width: max-content;
+  padding: 6px;
+
 }
